implement backend api features

--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -24,7 +24,7 @@
   </div>
   <div class="other">
     <div class="user-info">
-      <div class="text"><a href="/api/rover">Home</a></div>
+      <div class="text"><a href="/api/api">Home</a></div>
     </div>
     <div class="user-info">
       {{#if istheLogged}}
