display total following number

--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -87,9 +87,9 @@
           <span><i class="fa fa-map"></i></span>From ...
         </div>
       </div>
-      {{!-- display friends list --}}
+      {{!-- display following list  --}}
       <div class="card">
-        <div class="title">People I am following<span>700</span></div>
+        <div class="title">Connecting Outer Spaces<span>{{profileOwner.following.length}} outer space</span></div>
         <div class="thumb-wrapper">
         {{#each profileOwner.following}} 
           <div class="thumb-unit">
