--- a/views/profile/postDetails.hbs
+++ b/views/profile/postDetails.hbs
@@ -1,6 +1,5 @@
 <h1>post details</h1>
-<label for="image">image </label>
-<p>{{post.image}}</p>
+<img src="{{post.image}}">
 <label for="description">Description: </label>
 <p>{{post.description}}</p>
 <h2>comments</h2>
