--- a/views/picDay.hbs
+++ b/views/picDay.hbs
@@ -9,6 +9,6 @@
 <form action="/profile/share" method="POST" >
   <input name="image" value="{{this.url}}" hidden>
   <input name="description" value="{{this.explanation}}" hidden>
-  <button type="submit" class="follow-btn">share</button>
+  <button type="submit" class="btn btn-sm btn-outline-secondary">share</button>
 </form>
 {{/with}}
