--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -67,7 +67,7 @@
       {{else}}
       <div class="card">
         {{#if alreadyFollowed}}
-        <p>you two are already friends.</p>
+        <p>your Outer Spaces are connected.</p>
         {{else}}
         <form action="/profile/{{profileOwner._id}}/follow" method="POST" >
           <button type="submit" class="btn btn-sm btn-outline-secondary">follow this person</button>
