--- a/views/profile/postDetails.hbs
+++ b/views/profile/postDetails.hbs
@@ -1,24 +1,36 @@
-<h1>post details</h1>
-<img src="{{post.image}}">
-<label for="description">Description: </label>
-<p>{{post.description}}</p>
-<h2>comments</h2>
-{{#if post.comments}}
-{{#each post.comments}}
-<label>comment:</label>
-<p>{{this.comment}}</p>
-<label>owner:</label>
-<p>{{this.owner.username}}</p>
-{{/each}}
-{{else}}
-<p>No comments yet</p>
-{{/if}}
-<p>Add a comment</p>
-<form action="/profile/posts/{{post._id}}/comment" method="POST">
-  <label for="">Comment:</label>
-  <textarea type="text" name="comment"></textarea>
-  <button type="submit">ADD</button>
-</form>
-<br>
-<a href="/profile/posts/edit/{{post._id}}">Edit post</a>
-<a href="/profile/posts/delete/{{post._id}}">Delete post</a>
+<div class="post-details">
+  <h1>post details</h1>
+  <img src="{{post.image}}">
+  <label for="description">Description: </label>
+  <p>{{post.description}}</p>
+  {{!-- add like-the-post button --}}
+  {{#unless isLoggedInUser}}
+    {{#if alreadyLiked}}
+      <p>Liked</p>
+    {{else}}
+      <form action="/profile/posts/{{post._id}}/like" method="POST" >
+        <button type="submit" class="like-post-btn">Like the post</button>
+      </form>
+    {{/if}}
+  {{/unless}}
+  <h2>comments</h2>
+  {{#if post.comments}}
+  {{#each post.comments}}
+  <label>comment:</label>
+  <p>{{this.comment}}</p>
+  <label>owner:</label>
+  <p>{{this.owner.username}}</p>
+  {{/each}}
+  {{else}}
+  <p>No comments yet</p>
+  {{/if}}
+  <p>Add a comment</p>
+  <form action="/profile/posts/{{post._id}}/comment" method="POST">
+    <label for="">Comment:</label>
+    <textarea type="text" name="comment"></textarea>
+    <button type="submit">ADD</button>
+  </form>
+  <br>
+  <a href="/profile/posts/edit/{{post._id}}">Edit post</a>
+  <a href="/profile/posts/delete/{{post._id}}">Delete post</a>
+</div>
